language_tests/outputs/invalid/ambiguous_impl_selection_typecheck.out
error: conflicting conformance to 'AmbMarker'
 -> language_tests/source_files/invalid/ambiguous_impl_selection_typecheck.tr:13:14
	impl[T: AmbB] AmbMarker for AmbBox[T] {}
	              ^^^^^^^^^
info: existing conformance is defined here
 -> language_tests/source_files/invalid/ambiguous_impl_selection_typecheck.tr:12:14
	impl[T: AmbA] AmbMarker for AmbBox[T] {}
	              ^^^^^^^^^
